Package: R.filesets
===================

Version: 2.7.0 [2015-02-23]
o Now `[[` for GenericDataFileSet returns a GenericDataFile not only
  if a numeric index is given but also if a character string is given.
o Now argument 'idx' for getFile() for GenericDataFileSet can also
  be a character string, in which case the file returned is identified
  using indexOf(..., pattern=idx, by="exact", onMissing="error").
o Added RDataFile and RDataFileSet classes for *.RData files.
o Package now requires R (>= 3.0.3) which was released March 2014 and
  are in fact old; it's recommended to use a more recent version of R.
o ROBUSTNESS: Package test coverage is 51%.


Version: 2.6.2 [2015-01-05]
o CLEANUP: Using requireNamespace() instead of require() internally.


Version: 2.6.1 [2014-12-27]
o ROBUSTNESS: Added test for reading subset of a large tabular file.
o BUG FIX: as.character() for ChecksumFile gave an error when
  the checksum files was missing.


Version: 2.6.0 [2014-08-26]
o Added support for sortBy(..., by="filesize") and
  sortBy(..., decreasing=TRUE) for GenericDataFileSet.
o Added rep() for GenericDataFileSet.
o Submitted to CRAN.


Version: 2.5.10 [2014-08-25]
o BUG FIX: readDataFrame() would ignore argument 'colClasses'
  iff it had no names.  Added package system test for this case.


Version: 2.5.9 [2014-08-23]
o BUG FIX: Using commentChar=NULL for TabularTextFile:s failed.


Version: 2.5.8 [2014-08-19]
o Added readChecksums() for ChecksumFileSet.


Version: 2.5.7 [2014-08-17]
o BUG FIX: byPath() for GenericDataFileSet would output verbose message
  enumerating files loaded to stdout instead of stderr.


Version: 2.5.6 [2014-08-07]
o BUG FIX: dsApply() for GenericDataFileSet would coerce argument
  'verbose' to logical before applying the function.


Version: 2.5.5 [2014-08-02]
o BUG FIX: Argument 'sep' for readDataFrame() would only work for
  ',' and '\t'; now it works for any separator.
o Bumped package dependencies.


Version: 2.5.4 [2014-06-11]