@@ -1,9 +1,21 @@
 Package: R.filesets
-Version: 2.7.0
-Depends: R (>= 3.0.3), R.oo (>= 1.18.0)
-Imports: stats, R.methodsS3 (>= 1.7.0), R.utils (>= 1.34.0), R.cache (>= 0.10.0), digest (>= 0.6.8)
-Suggests: gtools (>= 3.4.1), BatchJobs (>= 1.5), BiocParallel (>= 0.4.1)
-SuggestsNote: Recommended: gtools
+Version: 2.7.0-9000
+Depends:
+  R (>= 3.0.3),
+  R.oo (>= 1.18.0)
+Imports:
+  stats,
+  R.methodsS3 (>= 1.7.0),
+  R.utils (>= 1.34.0),
+  R.cache (>= 0.10.0),
+  digest (>= 0.6.8)
+Suggests:
+  gtools (>= 3.4.1),
+  BatchJobs (>= 1.5),
+  BiocParallel (>= 0.4.1)
+SuggestsNote:
+  BioC (>= 2.14)
+  Recommended: gtools
 Date: 2015-02-23
 Title: Easy Handling of and Access to Files Organized in Structured Directories
 Authors@R: c(person("Henrik", "Bengtsson", role=c("aut", "cre", "cph"),
